[gd_scene load_steps=7 format=3 uid="uid://1ki6mn67p2tw"]

[ext_resource type="Script" path="res://autoload/admin_window.gd" id="1_vuysw"]
[ext_resource type="PackedScene" uid="uid://ddoqnxu2prbpa" path="res://scenes/ui/admin_window/console/console.tscn" id="3_1b4u1"]
[ext_resource type="PackedScene" uid="uid://0kd18rwefmvy" path="res://scenes/ui/admin_window/debug_menu/debug_menu.tscn" id="3_ixexx"]
[ext_resource type="PackedScene" uid="uid://cw5h2g1vjx36k" path="res://scenes/ui/collapsable_container/collapsable_container.tscn" id="4_sjwe7"]

[sub_resource type="Gradient" id="Gradient_0nchg"]
colors = PackedColorArray(0.099986, 0.099986, 0.099986, 1, 0.0562916, 0.0562916, 0.0562916, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_cbbhq"]
gradient = SubResource("Gradient_0nchg")
fill_to = Vector2(0, 1)

[node name="AdminWindow" type="Window"]
disable_3d = true
transparent_bg = true
title = "Admin console"
initial_position = 2
size = Vector2i(640, 810)
transparent = true
content_scale_mode = 1
script = ExtResource("1_vuysw")

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_cbbhq")

[node name="Contents" type="MarginContainer" parent="."]
texture_filter = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="ContentScroller" type="ScrollContainer" parent="Contents"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="Items" type="VBoxContainer" parent="Contents/ContentScroller"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CollapsableMenuScene" parent="Contents/ContentScroller/Items" instance=ExtResource("4_sjwe7")]
layout_mode = 2
title = "Scene"

[node name="SceneMenu" type="VBoxContainer" parent="Contents/ContentScroller/Items/CollapsableMenuScene"]
unique_name_in_owner = true
layout_mode = 2

[node name="ToggleBackgroundTransparency" type="CheckButton" parent="Contents/ContentScroller/Items/CollapsableMenuScene/SceneMenu"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
text = "Background Transparent"

[node name="ToggleUIVisibility" type="CheckButton" parent="Contents/ContentScroller/Items/CollapsableMenuScene/SceneMenu"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
text = "UI Visible"

[node name="CollapsableDebugMenu" parent="Contents/ContentScroller/Items" instance=ExtResource("4_sjwe7")]
layout_mode = 2
title = "Debugging"

[node name="DebugMenu" parent="Contents/ContentScroller/Items/CollapsableDebugMenu" instance=ExtResource("3_ixexx")]
layout_mode = 2

[node name="CollapsableConsole" parent="Contents/ContentScroller/Items" instance=ExtResource("4_sjwe7")]
layout_mode = 2
size_flags_vertical = 3
title = "Console"

[node name="Console" parent="Contents/ContentScroller/Items/CollapsableConsole" instance=ExtResource("3_1b4u1")]
layout_mode = 2

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="toggled" from="Contents/ContentScroller/Items/CollapsableMenuScene/SceneMenu/ToggleBackgroundTransparency" to="." method="_on_toggle_background_transparency_toggled"]
[connection signal="toggled" from="Contents/ContentScroller/Items/CollapsableMenuScene/SceneMenu/ToggleUIVisibility" to="." method="_on_toggle_ui_visibility_toggled"]
